--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.28.1
-pandas==2.3.3
-numpy==2.2.6
-matplotlib==3.10.8
-seaborn==0.13.2
-scikit-learn==1.7.2
-xgboost==2.1.3
-plotly==5.18.0
+streamlit>=1.31.0
+pandas>=2.0.0
+numpy>=1.24.0,<2.0
+matplotlib>=3.8.0
+seaborn>=0.12.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+plotly>=5.17.0
